--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
   <!-- Menu -->
   <nav class="navbar">
     <div class="logo">
-      <a href="#">Pedro Lourenço</a>
+      <a href="/">Pedro Lourenço</a>
     </div>
+
+  <!-- Ícone do menu (hamburger) -->
+  <div class="menu-icon" onclick="toggleMenu()">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+  </div>
+
     <ul class="menu">
-      <li><a href="#">Início</a></li>
+      <li><a href="/">Início</a></li>
       <li><a href="#sobre">Sobre Mim</a></li>
-      <li><a href="projetos.html">Projetos</a></li>
+      <li><a href="projetos/">Projetos</a></li>
       <li><a href="#contato">Contato</a></li>
     </ul>
   </nav>
@@ -41,7 +49,7 @@
       <div class="sobre-conteudo">
         <h2>Sobre mim</h2>
         <p>
-          Sou um desenvolvedor apaixonado por criar experiências digitais modernas e fluidas. Gosto de transformar ideias em soluções funcionais e criativas, com foco em performance e acessibilidade.
+        Sou um desenvolvedor apaixonado por tecnologia e cibersegurança. Gosto de transformar ideias em soluções digitais práticas e criativas. Com experiência em diversas linguagens de programação, busco sempre aprender e explorar novas tecnologias para resolver problemas reais e entregar resultados de qualidade.
         </p>
   
         <nav class="sobre-tabs">
@@ -52,7 +60,6 @@
   
         <div class="conteudo-tabs">
           <div id="skills" class="conteudo-tab ativo">
-            <h3>Skills</h3>
             <div class="skills-container">
               <div class="skill-item html">
                 <i class="fab fa-html5"></i>
@@ -82,14 +89,20 @@
           </div>
   
           <div id="educacao" class="conteudo-tab">
-            <h3>Educação</h3>
-            <p>Licenciatura em Engenharia Informática pela Universidade X (2020 - 2023).</p>
-          </div>
+            <p><strong>2020 - 2023</strong><br>
+               Técnico de Gestão e Programação de Sistemas Informáticos na Escola Secundária de Vendas Novas</p>
+            <p><strong>2024 - Atual</strong><br>
+               Técnico Especialista de Cibersegurança no Centro de Formação Profissional de Évora</p>
+          </div>          
   
           <div id="experiencia" class="conteudo-tab">
-            <h3>Experiência</h3>
-            <p>Web Developer freelancer com experiência em desenvolvimento de sites modernos, acessíveis e performantes para clientes e projetos pessoais.</p>
-          </div>
+            <p><strong>05/2022 - 07/2022 / 05/2023 - 07/2023</strong><br>
+               Estágio Curricular na Casa do Povo de Vendas Novas</p>
+            <p><strong>06/2022 - 09/2022</strong><br>
+               Empregado de Mesa no Mercado das Bifanas</p>
+            <p><strong>03/2024 - 10/2024</strong><br>
+               Operador de Armazém no Entreposto Lidl Marateca</p>
+          </div>          
         </div>
       </div>
     </div>
