--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <meta property="og:image" content="assets/images/icon.png">
   <meta property="og:type" content="website">
   <meta name="format-detection" content="telephone=no">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
 
   <link rel="icon" href="assets/images/icon.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
