--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Forçar não cache do próprio HTML -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <title>Portfólio | Pedro Lourenço</title>
   
   <!-- Meta Tags para SEO -->
@@ -11,21 +17,21 @@
   <meta name="keywords" content="Pedro Lourenço, Portfólio, Web Developer, Cibersegurança, Programador, Projetos">
   <meta property="og:title" content="Pedro Lourenço | Desenvolvedor Web">
   <meta property="og:description" content="Conheça o portfólio de Pedro Lourenço, com projetos, skills e contato.">
-  <meta property="og:image" content="assets/images/icon.png">
+  <meta property="og:image" content="assets/images/icon.png?v=20250426">
   <meta property="og:type" content="website">
   <meta name="format-detection" content="telephone=no">
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
 
+  <!-- Favicon versionado -->
+  <link rel="icon" href="assets/images/icon.png?v=20250426" type="image/png" />
 
-  <link rel="icon" href="assets/images/icon.png" type="image/png" />
-  <link rel="stylesheet" href="style.css" />
+  <!-- CSS versionado para forçar reload -->
+  <link rel="stylesheet" href="style.css?v=20250426" />
+
+  <!-- Fonts e ícones (externos) -->
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicon@2.14.0/devicon.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 
 <body>
